updating skew sym esdg paper

--- a/docs/ESDG_mortar/dg.bib
+++ b/docs/ESDG_mortar/dg.bib
@@ -1,3 +1,302 @@
+
+@inproceedings{maday1989nonconforming,
+  title={Nonconforming mortar element methods-Application to spectral discretizations},
+  author={Maday, Yvon and Mavriplis, Cathy and Patera, Anthony T},
+  booktitle={Domain Decomposition Methods},
+  pages={392--418},
+  year={1989}
+}
+@incollection{bernardi1993domain,
+  title={Domain decomposition by the mortar element method},
+  author={Bernardi, Christine and Maday, Yvon and Patera, Anthony T},
+  booktitle={Asymptotic and numerical methods for partial differential equations with critical parameters},
+  pages={269--286},
+  year={1993},
+  publisher={Springer}
+}
+
+@article{zhang2015simple,
+  title={A simple, efficient, and high-order accurate curved sliding-mesh interface approach to spectral difference method on coupled rotating and stationary domains},
+  author={Zhang, Bin and Liang, Chunlei},
+  journal={Journal of Computational Physics},
+  volume={295},
+  pages={147--160},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{staten2010hexahedral,
+  title={Hexahedral Mesh Matching: Converting non-conforming hexahedral-to-hexahedral interfaces into conforming interfaces},
+  author={Staten, Matthew L and Shepherd, Jason F and Ledoux, Franck and Shimada, Kenji},
+  journal={International journal for numerical methods in engineering},
+  volume={82},
+  number={12},
+  pages={1475--1509},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{kopriva2018free,
+  title={{Free-Stream Preservation for Curved Geometrically Non-Conforming Discontinuous Galerkin Spectral Elements}},
+  author={Kopriva, David A and Hindenlang, Florian and Boleman, Thomas and Gassner, Gregor J},
+  journal={arXiv preprint arXiv:1809.05206},
+  year={2018}
+}
+
+@article{guo2018bernstein,
+  title={{Bernstein-B\'{e}zier weight-adjusted discontinuous Galerkin methods for wave propagation in heterogeneous media}},
+  author={Guo, Kaihang and Chan, Jesse},
+  journal={arXiv preprint arXiv:1808.08645},
+  year={2018}
+}
+
+@article{vargas2018leapfrog,
+  title={{Leapfrog time-stepping for Hermite methods}},
+  author={Vargas, Arturo and Hagstrom, Thomas and Chan, Jesse and Warburton, Tim},
+  journal={arXiv preprint arXiv:1808.10481},
+  year={2018}
+}
+
+@article{pulliam1986artificial,
+  title={{Artificial dissipation models for the Euler equations}},
+  author={Pulliam, Thomas H},
+  journal={AIAA journal},
+  volume={24},
+  number={12},
+  pages={1931--1940},
+  year={1986}
+}
+
+@article{mattsson2004stable,
+  title={Stable and accurate artificial dissipation},
+  author={Mattsson, Ken and Sv{\"a}rd, Magnus and Nordstr{\"o}m, Jan},
+  journal={Journal of Scientific Computing},
+  volume={21},
+  number={1},
+  pages={57--79},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{henrick2005mapped,
+  title={Mapped weighted essentially non-oscillatory schemes: achieving optimal order near critical points},
+  author={Henrick, Andrew K and Aslam, Tariq D and Powers, Joseph M},
+  journal={Journal of Computational Physics},
+  volume={207},
+  number={2},
+  pages={542--567},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{jiang1996efficient,
+  title={{Efficient implementation of weighted ENO schemes}},
+  author={Jiang, Guang-Shan and Shu, Chi-Wang},
+  journal={Journal of computational physics},
+  volume={126},
+  number={1},
+  pages={202--228},
+  year={1996},
+  publisher={Elsevier}
+}
+@article{shu2016high,
+  title={{High order WENO and DG methods for time-dependent convection-dominated PDEs: A brief survey of several recent developments}},
+  author={Shu, Chi-Wang},
+  journal={Journal of Computational Physics},
+  volume={316},
+  pages={598--613},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{shu2003high,
+  title={{High-order finite difference and finite volume WENO schemes and discontinuous Galerkin methods for CFD}},
+  author={Shu, Chi-Wang},
+  journal={International Journal of Computational Fluid Dynamics},
+  volume={17},
+  number={2},
+  pages={107--118},
+  year={2003},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{hicken2018family,
+  title={{A Family of Entropy-Conservative Flux Functions for the Euler Equations}},
+  author={Hicken, Jason Edward and Crean, Jared},
+  journal={arXiv preprint arXiv:1807.03832},
+  year={2018}
+}
+
+@article{chan2018efficient,
+  title={{Efficient entropy stable Gauss collocation methods}},
+  author={Chan, Jesse and Fernandez, David C and Carpenter, Mark H},
+  journal={arXiv preprint arXiv:1809.01178},
+  year={2018}
+}
+
+@article{chan2018discretely,
+  title={{On discretely entropy stable weight-adjusted discontinuous Galerkin methods: curvilinear meshes}},
+  author={Chan, Jesse and Wilcox, Lucas C},
+  journal={arXiv preprint arXiv:1805.10934},
+  note={Accepted to Journal of Computational Physics},
+  year={2018}
+}
+
+@article{svard2018new,
+title = {{A new Eulerian model for viscous and heat conducting compressible flows}},
+journal = {{Physica A: Statistical Mechanics and its Applications}},
+volume = "506",
+pages = "350 - 375",
+year = "2018",
+issn = "0378-4371",
+doi = "https://doi.org/10.1016/j.physa.2018.03.097",
+url = "http://www.sciencedirect.com/science/article/pii/S0378437118304175",
+author = {Magnus Sv\"{a}rd}
+}
+
+@article{ortleb2017kinetic,
+  title={A Kinetic Energy Preserving DG Scheme Based on Gauss--Legendre Points},
+  author={Ortleb, Sigrun},
+  journal={Journal of Scientific Computing},
+  volume={71},
+  number={3},
+  pages={1135--1168},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{constantinescu2007multirate,
+  title={Multirate timestepping methods for hyperbolic conservation laws},
+  author={Constantinescu, Emil M and Sandu, Adrian},
+  journal={Journal of Scientific Computing},
+  volume={33},
+  number={3},
+  pages={239--278},
+  year={2007},
+  publisher={Springer}
+}
+@article{dawson2001high,
+  title={High resolution schemes for conservation laws with locally varying time steps},
+  author={Dawson, Clint and Kirby, Robert},
+  journal={SIAM Journal on Scientific Computing},
+  volume={22},
+  number={6},
+  pages={2256--2281},
+  year={2001},
+  publisher={SIAM}
+}
+
+@article{visbal1999high,
+  title={High-order-accurate methods for complex unsteady subsonic flows},
+  author={Visbal, Miguel R and Gaitonde, Datta V},
+  journal={AIAA journal},
+  volume={37},
+  number={10},
+  pages={1231--1239},
+  year={1999}
+}
+
+@article{beck2014high,
+  title={High-order discontinuous Galerkin spectral element methods for transitional and turbulent flow simulations},
+  author={Beck, Andrea D and Bolemann, Thomas and Flad, David and Frank, Hannes and Gassner, Gregor J and Hindenlang, Florian and Munz, Claus-Dieter},
+  journal={International Journal for Numerical Methods in Fluids},
+  volume={76},
+  number={8},
+  pages={522--548},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{flad2017use,
+  title={{On the use of kinetic energy preserving DG-schemes for large eddy simulation}},
+  author={Flad, David and Gassner, Gregor},
+  journal={Journal of Computational Physics},
+  volume={350},
+  pages={782--795},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@inproceedings{hutchinson2016efficiency,
+  title={Efficiency of high order spectral element methods on petascale architectures},
+  author={Hutchinson, Maxwell and Heinecke, Alexander and Pabst, Hans and Henry, Greg and Parsani, Matteo and Keyes, David},
+  booktitle={International Conference on High Performance Computing},
+  pages={449--466},
+  year={2016},
+  organization={Springer}
+}
+
+@phdthesis{fisher2012high,
+  title={{High-order L2 stable multi-domain finite difference method for compressible flows}},
+  author={Fisher, Travis Calob},
+  year={2012},
+  school={Purdue University}
+}
+@article{golay2015block,
+  title={Block-based adaptive mesh refinement scheme using numerical density of entropy production for three-dimensional two-fluid flows},
+  author={Golay, Frederic and Ersoy, Mehmet and Yushchenko, L and Sous, Damien},
+  journal={International Journal of Computational Fluid Dynamics},
+  volume={29},
+  number={1},
+  pages={67--81},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@article{dolling2001fifty,
+  title={Fifty years of shock-wave/boundary-layer interaction research: what next?},
+  author={Dolling, David S},
+  journal={AIAA journal},
+  volume={39},
+  number={8},
+  pages={1517--1531},
+  year={2001}
+}
+@Article{Kozdon2018,
+author={Kozdon, Jeremy E. and Wilcox, Lucas C.},
+title={{An Energy Stable Approach for Discretizing Hyperbolic Equations with Nonconforming Discontinuous Galerkin Methods}},
+journal={Journal of Scientific Computing},
+year={2018},
+issn={1573-7691},
+doi={10.1007/s10915-018-0682-1},
+url={https://doi.org/10.1007/s10915-018-0682-1}
+}
+
+
+@article{bui2012analysis,
+  title={{Analysis of an hp-nonconforming discontinuous Galerkin spectral element method for wave propagation}},
+  author={Bui-Thanh, Tan and Ghattas, Omar},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={50},
+  number={3},
+  pages={1801--1826},
+  year={2012},
+  publisher={SIAM}
+}
+
+
+
+@article{huerta2012simple,
+  title={{A simple shock-capturing technique for high-order discontinuous Galerkin methods}},
+  author={Huerta, Antonio and Casoni, E and Peraire, J},
+  journal={International Journal for Numerical Methods in Fluids},
+  volume={69},
+  number={10},
+  pages={1614--1632},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{maday1989non,
+author={Maday, Yvon and Mavriplis, Cathy and Patera, Anthony},
+title={{ Non-conforming mortar element methods: application to spectral discretizations}}, 
+booktitle={Domain Decomposition Methods},
+editor={Chan, Tony and Glowinski, Roland and Periaux, Jacques and Widlund,  Olof}, 
+publisher={SIAM},
+pages={392-418},
+year={1989}
+}
+
 @article{kopriva2016geometry,
   title={{Geometry effects in nodal discontinuous Galerkin methods on curved elements that are provably stable}},
   author={Kopriva, David A and Gassner, Gregor J},
@@ -155,11 +454,11 @@ author = "Hendrik Ranocha",
 keywords = "Hyperbolic conservation laws, Summation-by-parts, Stability, Conservation, Skew-symmetric form"
 }
 
-@article{chan2018skew,
+@article{chan2019skew,
   title={{Skew-symmetric entropy stable discontinuous Galerkin formulations}},
   author={Chan, Jesse},
   note={In preparation},
-  year={2018}
+  year={2019}
 }
 
 
